--- a/src/layouts/DocsLayout.astro
+++ b/src/layouts/DocsLayout.astro
@@ -43,7 +43,11 @@ const tableOfContentsHeadings = headings
         <main class="flex-1 lg:px-8 lg:py-6 min-w-0">
             <div class="flex items-center justify-between gap-4 mb-6">
                 <div class="hidden lg:flex justify-between w-full items-center">
-                    <Breadcrumb items={breadcrumbItems} />
+                    {
+                        !frontmatter.data.hide_breadcrumbs && (
+                            <Breadcrumb items={breadcrumbItems} />
+                        )
+                    }
                     <SourceButton slug={frontmatter.id} />
                 </div>
             </div>
