style(sidebar): update border radius

--- a/src/components/docs/Sidebar.astro
+++ b/src/components/docs/Sidebar.astro
@@ -66,7 +66,7 @@ const { tabs, showTabs, activeTab, currentSlug, collectionId } =
 
     aside::-webkit-scrollbar-thumb {
         background: hsl(var(--muted));
-        border-radius: 3px;
+        border-radius: var(--radius-lg);
     }
 
     aside::-webkit-scrollbar-thumb:hover {
