--- a/src/components/docs/TableOfContents.astro
+++ b/src/components/docs/TableOfContents.astro
@@ -18,7 +18,7 @@ const filteredHeadings = headings.filter((h) => h.depth === 2 || h.depth === 3);
         <aside class="sticky top-17 hidden h-[calc(100vh-5.25rem)] xl:block min-w-2xs">
             <div class="flex h-full flex-col gap-4">
                 <section
-                    class="rounded-2xl bg-popover p-5"
+                    class="rounded-lg bg-popover p-5"
                     style={`max-height: ${tocMaxHeight}`}
                 >
                     <nav
