feat(fonts): add Fira Code Variable font support

--- a/src/components/core/HeadSEO.astro
+++ b/src/components/core/HeadSEO.astro
@@ -4,6 +4,9 @@ import { getImage } from "astro:assets";
 
 import "@/styles/global.css";
 
+// Supports weights 300-700
+import "@fontsource-variable/fira-code";
+
 import type { HeadSEOProps } from "@/lib/types";
 import { SITE } from "@data/config";
 
